--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,23 +3,39 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/sellerFragment">
+    app:startDestination="@id/supplierFragment">
 
     <fragment
-        android:id="@+id/buyerFragment"
+        android:id="@+id/customerFragment"
         android:name="com.example.inventorymanager.home.view.fragment.CustomerFragment"
         android:label="fragment_buyer"
-        tools:layout="@layout/fragment_customer" />
+        tools:layout="@layout/fragment_customer" >
+        <action
+            android:id="@+id/action_customerFragment_to_addUserFragment"
+            app:destination="@id/addUserFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
     <fragment
         android:id="@+id/inventoryFragment"
         android:name="com.example.inventorymanager.home.view.fragment.InventoryFragment"
         android:label="fragment_inventory"
         tools:layout="@layout/fragment_inventory" />
     <fragment
-        android:id="@+id/sellerFragment"
+        android:id="@+id/supplierFragment"
         android:name="com.example.inventorymanager.home.view.fragment.SupplierFragment"
         android:label="fragment_seller"
-        tools:layout="@layout/fragment_supplier" />
+        tools:layout="@layout/fragment_supplier" >
+        <action
+            android:id="@+id/action_supplierFragment_to_addUserFragment"
+            app:destination="@id/addUserFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
     <activity
         android:id="@+id/loginActivity"
         android:name="com.example.inventorymanager.login.view.activity.LoginActivity"
@@ -30,4 +46,9 @@
         android:name="com.example.inventorymanager.home.view.activity.MainActivity"
         android:label="activity_main"
         tools:layout="@layout/activity_main" />
+    <fragment
+        android:id="@+id/addUserFragment"
+        android:name="com.example.inventorymanager.home.view.fragment.AddUserFragment"
+        android:label="fragment_add_user"
+        tools:layout="@layout/fragment_add_user" />
 </navigation>
