--- a/app/src/main/res/layout/fragment_supplier_details.xml
+++ b/app/src/main/res/layout/fragment_supplier_details.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:layout_constraintStart_toStartOf="parent"
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent">
@@ -173,6 +173,12 @@
             android:background="@drawable/border_circular"
             android:layout_margin="10dp"
             android:layout_height="wrap_content"/>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/addNewPurchase"
+            android:src="@drawable/ic_add" />
 
     </LinearLayout>
 
