--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -35,6 +35,13 @@
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+        <action
+            android:id="@+id/action_supplierFragment_to_supplierDetailsFragment"
+            app:destination="@id/supplierDetailsFragment"
+            app:enterAnim="@android:anim/slide_in_left"
+            app:exitAnim="@android:anim/slide_out_right"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <activity
         android:id="@+id/loginActivity"
@@ -54,7 +61,7 @@
         tools:layout="@layout/activity_main" />
     <fragment
         android:id="@+id/addUserFragment"
-        android:name="com.example.inventorymanager.home.view.fragment.AddUserFragment"
+        android:name="com.example.inventorymanager.details.view.fragment.AddUserFragment"
         android:label="fragment_add_user"
         tools:layout="@layout/fragment_add_user" />
 </navigation>
