--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,12 +13,17 @@
         <item name="colorSecondaryVariant">@color/colorSecondaryVariant</item>
         <item name="colorOnSecondary">@color/colorOnSecondary</item>
 
-<!--        &lt;!&ndash; Background, surface, and error colors &ndash;&gt;-->
-<!--        <item name="background">@color/colorBackground</item>-->
-<!--        <item name="colorSurface">@color/colorSurface</item>-->
-<!--        <item name="colorError">@color/colorError</item>-->
-<!--        <item name="colorOnBackground">@color/colorOnBackground</item>-->
-<!--        <item name="colorOnSurface">@color/colorOnSurface</item>-->
-<!--        <item name="colorOnError">@color/colorOnError</item>-->
+        <!--        &lt;!&ndash; Background, surface, and error colors &ndash;&gt;-->
+        <!--        <item name="background">@color/colorBackground</item>-->
+        <!--        <item name="colorSurface">@color/colorSurface</item>-->
+        <!--        <item name="colorError">@color/colorError</item>-->
+        <!--        <item name="colorOnBackground">@color/colorOnBackground</item>-->
+        <!--        <item name="colorOnSurface">@color/colorOnSurface</item>-->
+        <!--        <item name="colorOnError">@color/colorOnError</item>-->
+    </style>
+    <!-- Base application theme. -->
+    <style name="Base.Base.Theme.InventoryManager" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your dark theme here. -->
+        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
 </resources>
