[Fix] Multiple Things in Vishal Fragments

--- a/app/src/main/res/layout/fragment_new_product_purchase_from_supplier.xml
+++ b/app/src/main/res/layout/fragment_new_product_purchase_from_supplier.xml
@@ -58,7 +58,8 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Add New Item"/>
+                android:text="Add New Item"
+                android:backgroundTint="@color/app_theme"/>
         </LinearLayout>
 
 
