--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:background="@color/app_theme_dark"
+    android:background="@drawable/img_2"
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".login.view.activity.LoginActivity">
@@ -15,10 +15,11 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-medium"
-        android:text="@string/inventory_management"
+        android:fontFamily="sans-serif-black"
+        android:text="@string/hello_sign_in"
         android:textAlignment="center"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         android:textSize="26sp" />
 
     <com.google.android.material.card.MaterialCardView
@@ -36,16 +37,6 @@
             android:layout_gravity="center_horizontal"
             android:orientation="vertical"
             android:padding="24dp">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:text="@string/login"
-                android:textColor="@color/app_theme_dark"
-                android:textSize="26sp"
-                android:textStyle="bold" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
@@ -78,15 +69,24 @@
                     android:inputType="textPassword"/>
             </com.google.android.material.textfield.TextInputLayout>
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:textColor="@color/app_theme_dark"
+                android:text="Forgot password?"/>
+
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnLogin"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginTop="30dp"
                 android:backgroundTint="@color/app_theme_dark"
-                android:text="@string/login"
+                android:text="@string/sign_in"
                 android:textSize="18sp"
                 app:cornerRadius="20dp" />
+            
+
 
         </LinearLayout>
 
